--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,7 +107,7 @@ jobs:
 
       - name: Set plugin version
         run: |
-          sed -i 's~\${maven-version}~${{ env.POM_MAVEN_VERSION }}~g' ./BetonQuest-core/src/main/resources/plugin.yml
+          sed -i 's~\${maven-version}~${{ env.POM_MAVEN_VERSION }}~g' ./src/main/resources/plugin.yml
           echo "Set the plugin version to '${{ env.POM_MAVEN_VERSION }}'"
 
       - name: Build with Maven
@@ -117,8 +117,9 @@ jobs:
             cp target/BetonQuest*.jar build/output/
 
       - name: Publish to Maven Repo
-        if: "github.ref == 'refs/heads/master' || startsWith(github.ref,'refs/heads/master_') || startsWith(github.ref,'refs/tags/v')"
-        run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+        if: "github.ref == 'refs/heads/master' || startsWith(github.ref,'refs/heads/master_v') || startsWith(github.ref,'refs/tags/v')"
+        run: |
+          mvn deploy -s $GITHUB_WORKSPACE/settings.xml
         env:
           GITHUB_TOKEN: ${{ github.token }}
           MAVEN_USERNAME: github-publisher
@@ -132,6 +133,7 @@ jobs:
 
   documentation:
     name: Build docs
+    needs: [prepare]
     runs-on: ubuntu-latest
 
     steps:
@@ -143,6 +145,17 @@ jobs:
         with:
           python-version: '3.6'
           architecture: 'x64'
+
+      - name: Download Version
+        uses: actions/download-artifact@v1
+        with:
+          name: BetonQuest-Version
+          path: build/
+
+      - name: Set Version
+        run: |
+          POM_MAVEN_VERSION=$(cat build/Version.txt)
+          echo ::set-env name=POM_MAVEN_VERSION::$POM_MAVEN_VERSION
 
       - name: Cache dependencies
         uses: actions/cache@v1
@@ -157,13 +170,19 @@ jobs:
           python3 -m pip install --upgrade pip
           python3 -m pip install -r ./requirements.txt
 
-      - name: Build with mkdocs
-        run: mkdocs build
+      - name: Set docs version
+        run: |
+          sed -i 's~BetonQuest - UNOFFICIAL~BetonQuest - ${{ env.POM_MAVEN_VERSION }}~g' ./mkdocs.yml
+          echo "Set the docs version to '${{ env.POM_MAVEN_VERSION }}'"
 
-      - name: Upload Documentation
+      - name: Build with mkdocs
+        run: |
+          mkdocs build
+
+      - name: Upload Docs
         uses: actions/upload-artifact@v1
         with:
-          name: BetonQuest-Documentation
+          name: BetonQuest-Docs
           path: build/docs
 
   # If a tag is pushed starting with 'v' then we create a new release and attach the binary and documentation
@@ -186,10 +205,10 @@ jobs:
           name: BetonQuest-Artifacts
           path: build/output
 
-      - name: Download Documentation
+      - name: Download Docs
         uses: actions/download-artifact@v1
         with:
-          name: BetonQuest-Documentation
+          name: BetonQuest-Docs
           path: build/docs
 
       - name: Deploy to Github Pages
@@ -206,7 +225,7 @@ jobs:
           for asset in ./build/output/*.jar; do
             assets+=("-a" "$asset")
           done
-          assets+=("-a" "build/docs/pdf/documentation.pdf#BetonQuest-Documentation.pdf")
+          assets+=("-a" "build/docs/pdf/documentation.pdf#BetonQuest-Docs.pdf")
 
           tag_name="${GITHUB_REF##*/}"
           hub release create \
@@ -215,7 +234,7 @@ jobs:
             "$tag_name" << EOF
           Release $tag_name
 
-          [Online Documentation](https://betonquest.github.io/BetonQuest)
+          [Online Docs](https://betonquest.github.io/BetonQuest)
 
           Since Last Release:
           $(git log $(git describe --tags --abbrev=0 HEAD^ 2> /dev/null || git rev-list --max-parents=0 HEAD)..HEAD --graph --pretty=format:'%h %d %s [%an]' --abbrev-commit)
